--- a/site/index.html
+++ b/site/index.html
@@ -481,7 +481,7 @@
 <p>This tutorial is designed to introduce you to PowerShell, a powerful command-line interface and scripting language built by Microsoft. Whether you are new to PowerShell or are looking to expand your skills, this guide will provide you with the necessary information to get started.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <ul>
-<li><a href="#Installation">Installation</a></li>
+<li><a href="installation/">Installation</a></li>
 <li><a href="#Getting-Started-with-PowerShell">Getting Started with PowerShell</a></li>
 <li><a href="#PowerShell-Basics">PowerShell Basics</a></li>
 <li><a href="#Working-with-Files-and-Folders">Working with Files and Folders</a></li>
